Fixed the jump effect, changed a variable name sth to unique for the Lab 4 assignment.

--- a/style.css
+++ b/style.css
@@ -9,8 +9,13 @@ img {
 	max-width: 100%;
 	border: solid 1px #000000;"
 }
-#chart_place{
-	width:600
-	height:300
-	color:#FFFFE5
+#chart_place1{
+	width:600px;
+	height:300px;
+	background-color:#eeeeee;
+}
+#chart_place2{
+	width:600px;
+	height:300px;
+	background-color:#eeeeee;
 }
